<package format="3"> 
  <name>ui_test2</name>
  <version>0.1.0</version>
  <description>

     description

  </description>
  <maintainer email="wjddnrud4487@naver.com">jwg</maintainer>
  <author>jwg</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
